Changing the size of the page and centering it

--- a/css/style.css
+++ b/css/style.css
@@ -216,6 +216,8 @@ main {
 /**Adding padding to the page to make it look better, but only on desktops**/
 @media screen and (min-width: 1em){
   body {
-    width: 85%;
+    width: 80%;
+    left: 10%;
+    right: 10%;
   }
 }
