I forgot to add the css

--- a/css/style.css
+++ b/css/style.css
@@ -229,3 +229,13 @@ main {
     right: 10%;
   }
 }
+
+/**Maps rules**/
+#map {
+  height: 100%;
+}
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
